Fix spacing on secondary actions

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -96,6 +96,9 @@ body {
 .body .actions {
   position: relative;
   margin-top: $baseline;
+  &.secondary {
+    margin-top: 0;
+  }
 }
 
 .body .actions + .actions {
